Use symlinks instead of copying the config files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,14 @@
 {
     "cSpell.words": [
         "adoc",
+        "atim",
+        "COPR",
+        "Gemfury",
+        "gpgcheck",
         "ifdef",
         "jwillikers",
         "mkdir",
-        "ostree"
+        "ostree",
+        "rsteube"
     ]
 }
